--- a/shippable.yml
+++ b/shippable.yml
@@ -4,13 +4,13 @@ build:
   pre_ci:
     # Always pull the latest base image to avoid any cached images on the host
     - docker pull ubuntu:16.04
-    - docker build --rm -t drydock/u16nodapp:tip .
+    - docker build --rm -t drydock/u16appbase:tip .
 
   ci:
     - pwd
 
   on_success:
-    - if [ "$IS_PULL_REQUEST" != true ]; then docker push drydock/u16nodapp:tip; fi
+    - if [ "$IS_PULL_REQUEST" != true ]; then docker push drydock/u16appbase:tip; fi
 
 integrations:
   hub:
